results/SVCOMP/conversational/log-ExMIT-2024_03_10_17_19_59.txt
import java.util.Random;

public class ExMIT {
  //@ requires \fresh(args);
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
  public static void main(String[] args) {
    if (new Random().nextInt() == 1) foo(0);
  }

  //@ requires i == 0;
  //@ ensures 2 * (i + 1) == 10 ==> \result == 1 && \result == 0;
  public static int foo(int i) {
    if (2 * (i + 1) == 10) {
      assert false;
      return 1;
    }
    return 0;
  }

  //@ requires \fresh(i);
  //@ ensures ((i + 1) * 2 > 10 ==> \result == 1) || \result == 0;
  public static int boo(float i) {
    if ((i + 1) * 2 > 10) return 1;
    return 0;
  }
}
/home/max/Documents/JMLGPT/tmp/ExMIT.java:4: error: A \fresh expression may not be in a requires clause
  //@ requires \fresh(args);
                      ^
/home/max/Documents/JMLGPT/tmp/ExMIT.java:5: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
                                       ^
/home/max/Documents/JMLGPT/tmp/ExMIT.java:5: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
                                                        ^
/home/max/Documents/JMLGPT/tmp/ExMIT.java:20: error: The argument of \fresh must be of reference type
  //@ requires \fresh(i);
                      ^
4 errors

import java.util.Random;

public class ExMIT {
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
  public static void main(String[] args) {
    if (new Random().nextInt() == 1) foo(0);
  }

  //@ requires i == 0;
  //@ ensures 2 * (i + 1) == 10 ==> \result == 1 && \result == 0;
  public static int foo(int i) {
    if (2 * (i + 1) == 10) {
      assert false;
      return 1;
    }
    return 0;
  }

  //@ ensures ((i + 1) * 2 > 10 ==> \result == 1) || \result == 0;
  public static int boo(float i) {
    if ((i + 1) * 2 > 10) return 1;
    return 0;
  }
}
/home/max/Documents/JMLGPT/tmp/ExMIT.java:4: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
                                       ^
/home/max/Documents/JMLGPT/tmp/ExMIT.java:4: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
                                                        ^
2 errors

import java.util.Random;

public class ExMIT {
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
  public static void main(String[] args) {
    if (new Random().nextInt() == 1) foo(0);
  }

  //@ requires i == 0;
  //@ ensures 2 * (i + 1) == 10 ==> \result == 1 && \result == 0;
  public static int foo(int i) {
    if (2 * (i + 1) == 10) {
      assert false;
      return 1;
    }
    return 0;
  }

  //@ ensures ((i + 1) * 2 > 10 ==> \result == 1) || \result == 0;
  public static int boo(float i) {
    if ((i + 1) * 2 > 10) return 1;
    return 0;
  }
}
/home/max/Documents/JMLGPT/tmp/ExMIT.java:4: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
                                       ^
/home/max/Documents/JMLGPT/tmp/ExMIT.java:4: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
                                                        ^
2 errors

import java.util.Random;

public class ExMIT {
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
  public static void main(String[] args) {
    if (new Random().nextInt() == 1) foo(0);
  }

  //@ requires i == 0;
  //@ ensures 2 * (i + 1) == 10 ==> \result == 1 && \result == 0;
  public static int foo(int i) {
    if (2 * (i + 1) == 10) {
      assert false;
      return 1;
    }
    return 0;
  }

  //@ ensures ((i + 1) * 2 > 10 ==> \result == 1) || \result == 0;
  public static int boo(float i) {
    if ((i + 1) * 2 > 10) return 1;
    return 0;
  }
}
/home/max/Documents/JMLGPT/tmp/ExMIT.java:4: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
                                       ^
/home/max/Documents/JMLGPT/tmp/ExMIT.java:4: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
                                                        ^
2 errors

import java.util.Random;

public class ExMIT {
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
  public static void main(String[] args) {
    if (new Random().nextInt() == 1) foo(0);
  }

  //@ requires i == 0;
  //@ ensures 2 * (i + 1) == 10 ==> \result == 1 && \result == 0;
  public static int foo(int i) {
    if (2 * (i + 1) == 10) {
      assert false;
      return 1;
    }
    return 0;
  }

  //@ ensures ((i + 1) * 2 > 10 ==> \result == 1) || \result == 0;
  public static int boo(float i) {
    if ((i + 1) * 2 > 10) return 1;
    return 0;
  }
}
/home/max/Documents/JMLGPT/tmp/ExMIT.java:4: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
                                       ^
/home/max/Documents/JMLGPT/tmp/ExMIT.java:4: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
                                                        ^
2 errors

import java.util.Random;

public class ExMIT {
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
  public static void main(String[] args) {
    if (new Random().nextInt() == 1) foo(0);
  }

  //@ requires i == 0;
  //@ ensures 2 * (i + 1) == 10 ==> \result == 1 && \result == 0;
  public static int foo(int i) {
    if (2 * (i + 1) == 10) {
      assert false;
      return 1;
    }
    return 0;
  }

  //@ ensures ((i + 1) * 2 > 10 ==> \result == 1) || \result == 0;
  public static int boo(float i) {
    if ((i + 1) * 2 > 10) return 1;
    return 0;
  }
}
/home/max/Documents/JMLGPT/tmp/ExMIT.java:4: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
                                       ^
/home/max/Documents/JMLGPT/tmp/ExMIT.java:4: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
                                                        ^
2 errors

import java.util.Random;

public class ExMIT {
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
  public static void main(String[] args) {
    if (new Random().nextInt() == 1) foo(0);
  }

  //@ requires i == 0;
  //@ ensures 2 * (i + 1) == 10 ==> \result == 1 && \result == 0;
  public static int foo(int i) {
    if (2 * (i + 1) == 10) {
      assert false;
      return 1;
    }
    return 0;
  }

  //@ ensures ((i + 1) * 2 > 10 ==> \result == 1) || \result == 0;
  public static int boo(float i) {
    if ((i + 1) * 2 > 10) return 1;
    return 0;
  }
}
/home/max/Documents/JMLGPT/tmp/ExMIT.java:4: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
                                       ^
/home/max/Documents/JMLGPT/tmp/ExMIT.java:4: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures (\exists int i; i == 0; \result == 1) || \result == 0;
                                                        ^
2 errors

